Add gitignore. Update CV
Fixed table column width. Added computer skills.

--- a/cv_9.tex
+++ b/cv_9.tex
@@ -49,6 +49,10 @@
 \newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 
+\def \widthone {3.75cm}
+\def \widthtwo {12cm}
+
+
 \begin{document}
 
 \pagestyle{empty} % Removes page numbering
@@ -63,7 +67,7 @@
 
 \section{Personal Information}
 
-\begin{tabular}{R{4cm}l}
+\begin{tabular}{R{\widthone}L{\widthtwo}}
 \textsc{Date of Birth:} & December 29\textsuperscript{th}  1991.  \\
 \textsc{Nationality:} & Spanish. \\
 \textsc{Address:} & Nordostpassagen 23 Lgh 1203, 413 11 Gothenburg, Sweden.\\
@@ -77,32 +81,32 @@
 
 \section{Experience}
 
-\begin{tabular}{R{4cm}|L{11cm}}
+\begin{tabular}{R{\widthone}|L{\widthtwo}}
 \textsc{Aug} 2015 - \textsc{Present}& \textbf{Software Developer - Sensor Fusion} at Volvo Car Corporation\\
 & TODO\\
 \multicolumn{2}{c}{} \\
 
 %------------------------------------------------
 
-\textsc{Jun 2014-Jul 2014} & Research Engineer at \textsc{KTH}, Sweden \emph{}\\
+\textsc{Jun} 2014 - \textsc{Jul} 2014 & Research Engineer at \textsc{KTH}, Sweden \emph{}\\
 & TODO\\
 \multicolumn{2}{c}{} \\
 
 % --------------------------------------------------
 
-\textsc{Oct 2012-Oct 2013} & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
+\textsc{Oct} 2012 - \textsc{Oct} 2013 & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
 & TODO\\
 \multicolumn{2}{c}{} \\
 
 % --------------------------------------------------
 
-\textsc{Oct 2011-Oct 2012} & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
+\textsc{Oct} 2011 - \textsc{Oct} 2012 & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
 & TODO\\
 \multicolumn{2}{c}{} \\
 
 % --------------------------------------------------
 
-\textsc{Oct 2009-Oct 2010} & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
+\textsc{Oct} 2009 - \textsc{Oct} 2010 & Fellowship at E.T.S.I.T. UPM, Spain\emph{}\\
 & TODO\\
 \multicolumn{2}{c}{} \\
 \end{tabular}
@@ -111,22 +115,22 @@
 %	EDUCATION
 %----------------------------------------------------------------------------------------
 \section{Education}
-\begin{tabular}{R{4cm}|L{11cm}}	
-2013 - 2015 & Systems, Control and Robotics, Msc at KTH Royal Institute of Technology, Stockholm (Sweden). \\
+\begin{tabular}{R{\widthone}|L{\widthtwo}}	
+\textsc{Aug} 2013 - \textsc{Jun} 2015 & Systems, Control and Robotics, Msc at KTH Royal Institute of Technology, Stockholm (Sweden). \\
 & Thesis: ``Grid-Based Multi-Sensor Fusion for On-Road Obstacle Detection: Application to Autonomous Driving'' | \small Advisor: Prof. John \textsc{Folkesson}, \small Examiner: Prof. Patric \textsc{Jensfelt}\\
 &\normalsize \textsc{GPA}: A\\
 &\\
 
 %------------------------------------------------
 
-2013 - 2015 & Civilingenjörsutbilding, MSc Electrical Engineering at KTH Royal Institute of Technology, Stockholm (Sweden). \\
+\textsc{Aug} 2013 - \textsc{Jun} 2015 & Civilingenjörsutbilding, MSc Electrical Engineering at KTH Royal Institute of Technology, Stockholm (Sweden). \\
 & Thesis: ``Grid-Based Multi-Sensor Fusion for On-Road Obstacle Detection: Application to Autonomous Driving'' | \small Advisor: Prof. John \textsc{Smith}, \small Examiner: Prof. Patric \textsc{Jensfelt}\\
 &\normalsize \textsc{GPA}: A\\
 &\\
 
 %------------------------------------------------
 
-2009 - 2015 & Telecommunication Engineering, 5-year programme, MSc accredited by ABET), at E.T.S.I. Telecomunicación, Universidad Politécnica de Madrid, Madrid (Spain). GPA: 9.20/10.0\\
+\textsc{Sep} 2009 - \textsc{Jun} 2015 & Telecommunication Engineering, 5-year programme, MSc accredited by ABET), at E.T.S.I. Telecomunicación, Universidad Politécnica de Madrid, Madrid (Spain). GPA: 9.20/10.0\\
 &\\
 
 
@@ -137,20 +141,20 @@
 %	PROJECTS
 %----------------------------------------------------------------------------------------
 \section{Projects}
-\begin{tabular}{R{4cm}|L{11cm}}
-Sept 2015 - Present & Autonomous quadcopter. \\
+\begin{tabular}{R{\widthone}|L{\widthtwo}}
+\textsc{Sep} 2015 - \textsc{Present }& Autonomous quadcopter. \\
 & \\
 
-Oct 2014 - Dec 2014 & Robot for the course DD2425 - Robotics and Autonomous Systems. Award: winner of robot competition \\
+\textsc{Oct} 2014 - \textsc{Dec} 2014 & Robot for the course DD2425 - Robotics and Autonomous Systems. Award: winner of robot competition \\
 & \\
 
-Sep 2012 - Jan 2013 & Special Project for the course "Digital Electronics Systems Laboratory".  Augmented Reality mobile application to track and control robots, and display additional information on line-following competitions. \\
+\textsc{Sep} 2012 - \textsc{Jan} 2013 & Special Project for the course "Digital Electronics Systems Laboratory".  Augmented Reality mobile application to track and control robots, and display additional information on line-following competitions. \\
 & \\
 
-Jan 2012 - Jun 2012 & Design and implementation of line-following robot. Participation in Robotech-UPM and Campus Party robotic competitions. \\
+\textsc{Jan} 2012 - \textsc{Jun} 2012 & Design and implementation of line-following robot. Participation in Robotech-UPM and Campus Party robotic competitions. \\
 & \\
 
-Sep 2011 - Jan 2012 & Project for the course "Introduction to Intelligent Robotics", focused on robot learning based on genetic algorithms. \\
+\textsc{Sep} 2011 - \textsc{Jan} 2012 & Project for the course "Introduction to Intelligent Robotics", focused on robot learning based on genetic algorithms. \\
 & \\
 \end{tabular} 
 
@@ -160,7 +164,7 @@ Sep 2011 - Jan 2012 & Project for the course "Introduction to Intelligent Roboti
 
 \section{Honours and Awards}
 
-\begin{tabular}{rl}
+\begin{tabular}{R{\widthone}|L{\widthtwo}}
 2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government)\\
 
 2009 &  Highest Honours in High School. Best academic record. \\
@@ -172,7 +176,7 @@ Sep 2011 - Jan 2012 & Project for the course "Introduction to Intelligent Roboti
 
 \section{Languages}
 
-\begin{tabular}{rl}
+\begin{tabular}{R{\widthone}|L{\widthtwo}}
 \textsc{Spanish:} & Mothertongue\\
 \textsc{English:} & Fluent \\
 \textsc{Swedish:} & Advanced
@@ -183,10 +187,10 @@ Sep 2011 - Jan 2012 & Project for the course "Introduction to Intelligent Roboti
 %----------------------------------------------------------------------------------------
 
 \section{Software skills}
-\begin{tabular}{rl}
-Basic Knowledge: & \textsc{php}, my\textsc{sql}, \textsc{html}, Access, \textsc{Linux}, ubuntu, {\fb \LaTeX}\setmainfont[SmallCapsFont=Fontin SmallCaps]{Fontin-Regular}\\
-
-Intermediate Knowledge: & \textsc{vba}, Excel, Word, PowerPoint\\
+\begin{tabular}{R{\widthone}|L{\widthtwo}}
+\textsc{Proficient} & Java, C, C++, \textsc{Matlab} \& \textsc{Simulink}, OpenCV, PCL, ROS, Qt\\
+\textsc{Intermediate} & OpenGL, OpenCL, CUDA, Bash scripting, Git, Gerrit, {\fb \LaTeX} \\
+\textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -195,9 +199,7 @@ Intermediate Knowledge: & \textsc{vba}, Excel, Word, PowerPoint\\
 
 \section{Interests}
 
-Technology, Open-Source, Programming\\
-Paradoxes in Decision Making, Psychoanalysis, Behavioural Finance\\
-Football, Travelling
+TO-DO
 
 %----------------------------------------------------------------------------------------
 \end{document}
