Change font to Fourier

--- a/cv.tex
+++ b/cv.tex
@@ -25,6 +25,7 @@
 %----------------------------------------------------------------------------------------
 
 \documentclass[a4paper,12pt]{article} % Default font size and paper size
+\usepackage{fourier}
 
 \usepackage[usenames,dvipsnames]{xcolor} % Required for specifying custom colors
 \usepackage[utf8]{inputenc}
