--- a/cv.bib
+++ b/cv.bib
@@ -1,5 +1,5 @@
 @ARTICLE{Galvez2015, 
-author={C. Gálvez and J. Torres and J. M. Menéndez}, 
+author={\textbf{C. Gálvez} and J. Torres and J. M. Menéndez}, 
 journal={IET Intelligent Transport Systems}, 
 title={Vacant parking area estimation through background subtraction and transience map analysis}, 
 year={2015}, 
@@ -12,7 +12,7 @@ ISSN={1751-956X},
 month={},}
 
 @mastersthesis{Galvez2015Thesis,
-   author = {Gálvez, Carlos},
+   author = {\textbf{C. Gálvez}},
    institution = {KTH, Computer Vision and Active Perception, CVAP},
    school = {KTH, Computer Vision and Active Perception, CVAP},
    title = {Grid-Based Multi-Sensor Fusion for On-Road Obstacle Detection: Application to Autonomous Driving},
