--- a/cv.tex
+++ b/cv.tex
@@ -83,21 +83,28 @@
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}	
 \textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Systems, Control and Robotics, Msc} \\
-& KTH Royal Institute of Technology, Stockholm, Sweden. \\ 
-& Master Thesis: ``Grid-Based Multi-Sensor Fusion for On-Road Obstacle Detection: Application to Autonomous Driving'' \cite{Galvez2015Thesis}. Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}.
-\textsc{GPA}: A\\
+& \textsc{KTH Royal Institute of Technology}, Stockholm, Sweden. \\ 
+& Master Thesis on sensor fusion for autonomous driving \cite{Galvez2015Thesis}. Advisor: Prof. John \textsc{Folkesson}, Examiner: Prof. Patric \textsc{Jensfelt}.
+\textsc{GPA}: A.\\
 &\\
 
 %------------------------------------------------
 
 \textsc{Aug} 2013 - \textsc{Jun} 2015 & \textbf{Civilingenjörsutbilding, MSc Electrical Engineering} \\
-& KTH Royal Institute of Technology, Stockholm, Sweden \\
+& \textsc{KTH Royal Institute of Technology}, Stockholm, Sweden. \\
+&\\
+
+%------------------------------------------------
+
+\textsc{Jul} 2014 - \textsc{Aug} 2014 & \textbf{Tohoku University Engineering Summer Programme (TESP)} \\
+& \textsc{Tohoku University}, Sendai, Japan.\\
+& Lectures and seminars in robotics. Project: lidar-based obstacle avoidance. \\
 &\\
 
 %------------------------------------------------
 
 \textsc{Sep} 2009 - \textsc{Jun} 2015 & \textbf{Telecommunication Engineering, (5-year programme, MSc accredited by ABET)} \\
-& E.T.S.I. Telecomunicación, Universidad Politécnica de Madrid, Madrid, Spain. \\
+& \textsc{E.T.S.I. Telecomunicación, Universidad Politécnica de Madrid}, Spain. \\
 & GPA: 9.20/10.0\\
 
 \end{tabular}
@@ -111,30 +118,30 @@
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}
-\textsc{Aug} 2015 - \textsc{Present}& \textbf{Software Developer - Sensor Fusion} at Volvo Car Corporation\\
-& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical coding practices as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
+\textsc{Aug} 2015 - \textsc{Present}& \textbf{Software Developer - Sensor Fusion} at \textsc{Volvo Car Corporation}, Sweden\\
+& Development of algorithms for sensor data fusion, including lidar, radar and camera, in the context of Volvo Cars' autonomous driving project \emph{Drive Me}. Experience in high-perfomance computing, safety-critical coding as well as the ISO 26262 standard. Agile development and continuous integration workflow.  \\
 &\\
 %------------------------------------------------
 
-\textsc{Jun} 2014 - \textsc{Jul} 2014 & \textbf{Research Engineer} at \textsc{KTH}, Sweden\\
-& Development of an autonomous robot to perform 3D mapping with Kinect-like cameras in hardly accesible environments. Based on ROS, OpenCV and PCL. In collaboration with the Computer Vision and Active Percepction Lab (CVAP) at KTH and Trafikverket (Swedish Transport Administration).\\
+\textsc{Jun} 2014 - \textsc{Jul} 2014 & \textbf{Research Engineer} at \textsc{Computer Vision and Active Perception Lab}, KTH, Sweden\\
+& Development of an autonomous robot to perform 3D mapping with Kinect-like cameras in hardly accesible environments. Based on ROS, OpenCV and PCL.\\
 &\\
 
 % --------------------------------------------------
 
-\textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at E.T.S.I.T. UPM, Spain\\
-& Development of an vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project "Ciudad 2020". In collaboration with the Group of Application of Visual Telecommunications at ETSIT-UPM. 
+\textsc{Oct} 2012 - \textsc{Oct} 2013 & \textbf{Fellowship} at \textsc{Signals and Systems Department}, ETSIT-UPM, Spain\\
+& Development of an vision-based parking occupancy estimation system, using OpenCV and Qt libraries. Involved in the national project "Ciudad 2020". In collaboration with the at ETSIT-UPM. 
 Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 &\\
 % --------------------------------------------------
 
-\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at E.T.S.I.T. UPM\\
-& Development and integration of a new educational platform for the study of ARM microcontrollers at the Electronic Systems Laboratory. In collaboration with the Electrical Engineering Department at ETSIT-UPM.\\
+\textsc{Oct} 2011 - \textsc{Oct} 2012 & \textbf{Fellowship} at \textsc{Electrical Engineering Department}, ETSIT-UPM, Spain\\
+& Development and integration of a new educational platform for the study of ARM microcontrollers at the Electronic Systems Laboratory.\\
 
 % --------------------------------------------------
 &\\
-\textsc{Oct} 2009 - \textsc{Oct} 2010 &  \textbf{Fellowship} at E.T.S.I.T. UPM, Spain\\
-& Design of an automated optical handwritten character recognition system (OCR), with the aim of making easier and more efficient various teaching and administrative tasks. In collaboration with the Telematics Engineering Department at ETSIT-UPM.\\
+\textsc{Oct} 2009 - \textsc{Oct} 2010 &  \textbf{Fellowship} at \textsc{Telematic Engineering Department}, ETSIT-UPM, Spain\\
+& Design of an optical handwritten character recognition system (OCR), with the aim of automatizing various teaching and administrative tasks.\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -144,21 +151,21 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|p{\widthtwo}}
-\textsc{Sep} 2015 - \textsc{Present }& Autonomous quadcopter based on Arduino Mega 2560 and Raspberry Pi 2. \\
+\textsc{Sep} 2015 - \textsc{Present }& \textbf{Autonomous quadcopter}. Based on Arduino Mega 2560 and Raspberry Pi 2. \\
 & \\
 
-\textsc{Mar} 2015 - \textsc{Jun} 2015 & Face detector combining Adaboost and Deep Learning. \\
+\textsc{Mar} 2015 - \textsc{Jun} 2015 & \textbf{Face detector}. Image-based, combining Adaboost and Deep Learning. \\
 & \\
-\textsc{Oct} 2014 - \textsc{Dec} 2014 & Robot for the course DD2425 - Robotics and Autonomous Systems. Award: winner of robot competition \\
-& \\
-
-\textsc{Sep} 2012 - \textsc{Jan} 2013 & Augmented Reality mobile application to track and control robots. Special Project for the course "Digital Electronics Systems Laboratory".   \\
+\textsc{Oct} 2014 - \textsc{Dec} 2014 & \textbf{Robot for the \emph{Robotics and Autonomous Systems} course}. Control, 3D object recognition, mapping and localization. \\
 & \\
 
-\textsc{Jan} 2012 - \textsc{Jun} 2012 & Line-following robot. Participation in Robotech-UPM and Campus Party robotic competitions. \\
+\textsc{Sep} 2012 - \textsc{Jan} 2013 & \textbf{Augmented Reality mobile application}. Real-time visual tracking and control of robots. Special Project for the \emph{Digital Electronics Systems Laboratory} course.   \\
 & \\
 
-\textsc{Sep} 2011 - \textsc{Jan} 2012 & Predator-prey robot system learning based on genetic algorithms. Project for the course "Introduction to Intelligent Robotics''\\
+\textsc{Jan} 2012 - \textsc{Jun} 2012 & \textbf{Line-following robot}. Participation in Robotech-UPM and Campus Party robotic competitions. \\
+& \\
+
+\textsc{Sep} 2011 - \textsc{Jan} 2012 & \textbf{Adversarial learning through genetic algorithms}. Predator-prey robot learning simulation. Project for the \emph{Introduction to Intelligent Robotics} course.\\
 
 \end{tabular} 
 
@@ -170,8 +177,8 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
+2015 & Winner of the robot contest for the course \emph{Robotics and Autonomous Systems}\\
 2009 - 2013 & Extraordinary Academic Performance Scholarship (Madrid Government)\\
-&\\
 2009 &  Highest Honours in High School. Best academic record. \\
 \end{tabular}
 
@@ -184,9 +191,7 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \noindent
 \begin{tabular}{R{\widthone}|L{4.75cm} R{7cm}}
 \textsc{Spanish:} & Mothertongue&\\
-&\\
 \textsc{English:} & Fluent &\emph{TOEFL iBT: 110/120, September 2012 (Spain)} \\
-&\\
 \textsc{Swedish:} & Advanced & \emph{CEFR: B2, June 2015 (Sweden)}
 \end{tabular}
 
@@ -194,7 +199,7 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 %	COMPUTER SKILLS 
 %----------------------------------------------------------------------------------------
 \vspace{\vspac}
-\section{Software skills}
+\section{Computer skills}
 \vspace{\vspac}
 \noindent
 \begin{tabular}{R{\widthone}|L{\widthtwo}}
@@ -205,7 +210,7 @@ Scientific paper published at IET-ITS \cite{Galvez2015}. \\
 \textsc{Basic} & HTML, CSS, JavaScript, J2EE, SQL, Android, ASM, VHDL\\
 \end{tabular}\vspace{\vspac}
 \noindent
-Git repository: \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp}
+GitHub repository: \href{https://github.com/carlosgalvezp}{https://github.com/carlosgalvezp}
 
 %----------------------------------------------------------------------------------------
 %	INTERESTS AND ACTIVITIES
@@ -216,7 +221,7 @@ Git repository: \href{https://github.com/carlosgalvezp}{https://github.com/carlo
 \noindent
 Travelling, photography, hiking, cycling, reading, movies, music.  \\
 \noindent
-Acquiring new knowledge through online courses (MOOC): Coursera, Udacity, edX.
+Learning through online courses (MOOC): Coursera, Udacity, edX, etc.
 
 %----------------------------------------------------------------------------------------
 %	PUBLICATIONS
